# llm-eval

./: .env.example  .gitignore  dafe.py  ensemble.py  ensemble_stats.py  figures.py  llm.py  llm_openai.py  main.py  main_openai.py  main_unanswered.py  pyproject.toml  rate_limit.py  spanish_reader_eval_v4_0_with_v2_0_karla_spanish_reader_eval_v4.csv  stats.py  weighted.py
spanish_rosie_evals/: anthropic_claude-3.5-sonnet_evaluation_results.json  dafe_gpt-3.5-turbo_anthropic_claude-3.5-sonnet_openai_gpt-4.json  dafe_gpt-3.5-turbo_prometheus_meta-llama_llama-3-8b-instruct.json  dafe_gpt-3.5-turbo_prometheus_mistralai_mixtral-8x7b-instruct.json  dafe_meta-llama_llama-3-8b-instruct_meta-llama_llama-3-70b-instruct_mistralai_mixtral-8x7b-instruct.json  dafe_openai_gpt-4o-mini_anthropic_claude-3.5-sonnet_openai_gpt-4.json  ensemble_gpt-3.5-turbo_8x7b_prometheus.json  ensemble_gpt3.5_gpt4_claude3.5.json  ensemble_gpt4o-mini_gpt4_claude3.5.json  ensemble_llama8b_llama70b_8x7b.json  ensemble_llama8b_llama70b_mixtral.json  ensemble_prometheus_gpt3.5_llama8b.json  gpt-3.5-turbo_evaluation_results.json  meta-llama_llama-3-70b-instruct_evaluation_results.json  meta-llama_llama-3-8b-instruct_evaluation_results.json  mistralai_mixtral-8x7b-instruct_evaluation_results.json  openai_gpt-4_evaluation_results.json  openai_gpt-4o-mini_evaluation_results.json  prometheus_evaluation_results.json
